Api doc logo
