# app/Http/Controllers/Api/NumberLayananController.php
@@ -9,6 +9,26 @@ use Illuminate\Support\Facades\Log;
 
 class NumberLayananController extends Controller
 {
+  /**
+   * @OA\Get(
+   *     path="/api/v1/service-number",
+   *     tags={"ServiceNumber"},
+   *     summary="Get list of service-number",
+   *     description="Returns list of service-number",
+   *     @OA\Response(
+   *         response=200,
+   *         description="successful operation",
+   *         @OA\JsonContent(
+   *             type="array",
+   *             @OA\Items(ref="#/components/schemas/ServiceNumber")
+   *         )
+   *     ),
+   *     @OA\Response(
+   *         response=500,
+   *         description="Internal Server Error"
+   *     )
+   * )
+   */
   public function index()
   {
     try {
